Fix dialog settings z-index

--- a/style/board.css
+++ b/style/board.css
@@ -141,7 +141,7 @@ body {
 }
 
 .settings_dialog {
-  z-index: 10000;
+  z-index: 20000 !important;
 }
 .settings_dialog:focus {
   outline: none;
